basic/ingresses/ingress-with-auth-and-rewrites.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-application
  annotations:
    # require auth via vouch proxy
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/auth-signin: "https://vouch.slac.stanford.edu/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
    nginx.ingress.kubernetes.io/auth-url: https://vouch.slac.stanford.edu/validate
    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Vouch-User, X-Vouch-Idp-Claims-Name, X-Vouch-IdP-AccessToken, X-Vouch-IdP-RefreshToken, X-Vouch-IdP-IdToken, X-Vouch-Token'
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_IdToken;
      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Remote-Name $http_x_vouch_idp_claims_name;
      proxy_set_header Remote-User $http_x_vouch_idp_claims_name;

    # rewrite requests so your-application gets expected path requests
    # ie instead of receiving a request for /path-your-application-appears-at/ 
    # your application will instead receive a request for /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: s3df.slac.stanford.edu
    http:
      paths:
      - path: /path-your-application-appears-at(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: your-application-service-name
            port:
              name: your-application-port-name
